--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -212,69 +212,37 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
 
             }
         };
-// 第一次调用转盘
+        // 第一次调用转盘
         function roll1() {
-            console.log('开始xiwan：');
             var promise = new Promise(function (resolve, reject) {
-
-                setTimeout(function(){
-                    console.log('洗碗完毕!');
-                    resolve('干净的碗筷');
-                    roll();
-                });
-                // roll();
+                resolve('干净的碗筷');
+                roll();
             });
-
-
             return promise;
         }
-// 第2次调用转盘
+        // 第2次调用转盘
         function roll2(){
-            console.log("ffdfd");
             var promise = new Promise(function (resolve, reject) {
-                setTimeout(function(){
-                    console.log('洗碗完毕!');
-                    resolve('干净的碗筷');
-                    roll();
-                });
+                resolve('干净的碗筷');
+                roll();
             });
-
             return promise;
         }
-// 第3次调用转盘
+        // 第3次调用转盘
         function roll3() {
-            console.log("ffdfd");
             var promise = new Promise(function (resolve, reject) {
-                setTimeout(function () {
-                    console.log('洗碗完毕!');
-                    resolve('干净的碗筷');
-                    roll();
-                });
-            });
-            console.log("aaa",lottery.prize,lottery.cycle,lottery.index,lottery.speed);
-            return promise;
-        }
-// 第4次调用转盘
-        function roll4() {
-            console.log("ffdfd");
-            var promise = new Promise(function (resolve, reject) {
-                setTimeout(function () {
-                    console.log('洗碗完毕!');
-                    resolve('干净的碗筷');
-                    roll();
-                });
+                resolve('干净的碗筷');
+                roll();
             });
             return promise;
         }
-// 第5次调用转盘
+
+            // 第5次调用转盘
         function roll5() {
             console.log("ffdfd");
             var promise = new Promise(function (resolve, reject) {
-                setTimeout(function () {
-                    console.log('洗碗完毕!');
-                    resolve('干净的碗筷');
-                    roll();
-                });
+                resolve('干净的碗筷');
+                roll();
             });
             return promise;
         }
@@ -372,10 +340,6 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
                 if (click) {//click控制一次抽奖过程中不能重复点击抽奖按钮，后面的点击不响应
                     return false;
                 }else{
-                    // lottery.speed=100;
-                    // roll1().then(function(){
-                    //     return roll1();
-                    // });
                     //传送id判断是否登录等
                     $.ajax({
                         url:check_url,
@@ -387,15 +351,14 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
                                     .then(function(){
                                         return roll2();
                                     })
-                                    .then(function () {
-                                        return roll3();
-                                    })
-                                    .then(function () {
-                                        return roll4();
-
-                                    });
-                                // roll();
-                                // roll().then(roll());    //转圈过程不响应click事件，会将click置为false
+                                    // .then(function () {
+                                    //     return roll3();
+                                    // })
+                                    // .then(function () {
+                                    //     return roll4();
+                                    //
+                                    // })
+                                ;
                                 click=true; //一次抽奖完成后，设置click为true，可继续抽奖
                                 // console.log("aaa");
                                 // location.reload();
