--- a/wap/Tpl/main/turntable.html
+++ b/wap/Tpl/main/turntable.html
@@ -5,6 +5,7 @@ $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/style.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/color.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/article.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/public.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/styletrun.css";
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery-1.6.2.min.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.bgiframe.js";
@@ -13,16 +14,13 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.weebox.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.touchwipe.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/fastclick.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/TouchSlide.1.1.js";
-
+$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/bootstrap.min.js";
+$this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/bootstrap.min.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js";
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
-
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/styletrun.css";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery-1.11.0.min.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
 
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
