--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -173,139 +173,165 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
 
 
 <script>
-    $(function(){
-        var lottery={
-            index:-1,    //当前转动到哪个位置，起点位置
-            count:0,    //总共有多少个位置
-            timer:0,    //setTimeout的ID，用clearTimeout清除
-            speed:5,    //初始转动速度
-            times:0,    //转动次数
-            cycle:30,    //转动基本次数：即至少需要转动多少次再进入抽奖环节
-            prize:-1,    //中奖位置
-            init:function(id){
-                if ($("#"+id).find(".lottery-unit").length>0) {
-                    $lottery = $("#"+id);
-                    $units = $lottery.find(".lottery-unit");
-                    this.obj = $lottery;
-                    this.count = $units.length;
-                    $lottery.find(".lottery-unit-"+this.index).addClass("active");
-                };
-            },
-            //初始化
-            rolls:function(){
 
-                var index = this.index;
-                var count = this.count;
-                var lottery = this.obj;
-                $(lottery).find(".lottery-unit-"+index).removeClass("active");
-                index += 1;
-                if (index>count-1) {
-                    index = 0;
-                };
-                $(lottery).find(".lottery-unit-"+index).addClass("active");
-                this.index=index;
-                return false;
-            },
-            stop:function(index){
-                this.prize=index;
-                return false;
+
+    var click=false;
+
+    function save (){
+        var save_url = APP_ROOT + "/index.php?ctl=turntable&act=save";
+        var prize = {$prize_json};
+        $prizeid = prize[{$goodluck}].id;
+        console.log($prizeid);
+        $.ajax({
+            url:save_url,
+            type:'POST',
+            data:{'prizeid':$prizeid},
+            success:function(arg){
 
             }
-        };
-        // 第一次调用转盘
-        function roll1() {
-            var promise = new Promise(function (resolve, reject) {
-                resolve('干净的碗筷');
-                roll();
-            });
-            return promise;
-        }
-        // 第2次调用转盘
-        function roll2(){
-            var promise = new Promise(function (resolve, reject) {
-                resolve('干净的碗筷');
-                roll();
-            });
-            return promise;
-        }
-        // 第3次调用转盘
-        function roll3() {
-            var promise = new Promise(function (resolve, reject) {
-                resolve('干净的碗筷');
-                roll();
-            });
-            return promise;
-        }
+        })
+    }
 
-            // 第5次调用转盘
-        function roll5() {
-            console.log("ffdfd");
-            var promise = new Promise(function (resolve, reject) {
-                resolve('干净的碗筷');
-                roll();
-            });
-            return promise;
-        }
+    function roll(resolve,p){
 
-        function roll(){
-            if (lottery.times > lottery.cycle+10 && lottery.prize==lottery.index) {
-                //中奖的索引
-                clearTimeout(lottery.timer);
-                lottery.prize=-1;
-                lottery.times=0;
-                click=false;
-                console.log(200,lottery.times,lottery.cycle,lottery.index,lottery.speed);
-                var name=$(".lottery-unit-"+{$goodluck}+"").text();
-                alert(name);
-                // location.reload();
-                save();
+        if (lottery.times > lottery.cycle+10 && lottery.prize==lottery.index) {
+            //中奖的索引
+            clearTimeout(lottery.timer);
+            lottery.prize=-1;
+            lottery.times=0;
+            click=false;
+            console.log(200,lottery.times,lottery.cycle,lottery.index,lottery.speed);
+            var name=$(".lottery-unit-"+{$goodluck}+"").text();
+            alert(name);
+            // location.reload();
+            save();
+            resolve(p);
+            return;
 
-                lottery.init();
-                return;
+
+        }else{
+            if (lottery.times<lottery.cycle) {
+                lottery.speed -= 10;
+            }else if(lottery.times==lottery.cycle) {
+                var index ={$goodluck};
+                // var index = Math.random()*(lottery.count)|0;//中奖物品通过一个随机数生成
+                lottery.prize = index;
             }else{
-                if (lottery.times<lottery.cycle) {
-                    lottery.speed -= 10;
-                }else if(lottery.times==lottery.cycle) {
-                    var index ={$goodluck};
-                    // var index = Math.random()*(lottery.count)|0;//中奖物品通过一个随机数生成
-                    lottery.prize = index;
+                if (lottery.times > lottery.cycle+10 && ((lottery.prize==0 && lottery.index==7) || lottery.prize==lottery.index+1)) {
+                    lottery.speed += 110;
                 }else{
-                    if (lottery.times > lottery.cycle+10 && ((lottery.prize==0 && lottery.index==7) || lottery.prize==lottery.index+1)) {
-                        lottery.speed += 110;
-                    }else{
-                        lottery.speed += 20;
-                    }
+                    lottery.speed += 20;
                 }
-                if (lottery.speed<40) {
-                    lottery.speed=40;
-                };
-                // console.log(lottery.speed)
-                lottery.timer = setTimeout(roll,lottery.speed);//循环调用
             }
-            lottery.times += 1;
-            lottery.rolls();//转动过程调用的是lottery的roll方法，这里是第一次调用初始化
+            if (lottery.speed<40) {
+                lottery.speed=40;
+            };
+            // console.log(lottery.speed)
+            lottery.timer = setTimeout(function(){
+
+                roll(resolve,p);
+
+            },lottery.speed);//循环调用
+        }
+        lottery.times += 1;
+        lottery.rolls();//转动过程调用的是lottery的roll方法，这里是第一次调用初始化
+
+
+
+    }
+
+
+    var lottery={
+        index:-1,    //当前转动到哪个位置，起点位置
+        count:0,    //总共有多少个位置
+        timer:0,    //setTimeout的ID，用clearTimeout清除
+        speed:5,    //初始转动速度
+        times:0,    //转动次数
+        cycle:30,    //转动基本次数：即至少需要转动多少次再进入抽奖环节
+        prize:-1,    //中奖位置
+        init:function(id){
+            if ($("#"+id).find(".lottery-unit").length>0) {
+                $lottery = $("#"+id);
+                $units = $lottery.find(".lottery-unit");
+                this.obj = $lottery;
+                this.count = $units.length;
+                $lottery.find(".lottery-unit-"+this.index).addClass("active");
+            };
+        },
+        //初始化
+        rolls:function(){
+
+            var index = this.index;
+            var count = this.count;
+            var lottery = this.obj;
+            $(lottery).find(".lottery-unit-"+index).removeClass("active");
+            index += 1;
+            if (index>count-1) {
+                index = 0;
+            };
+            $(lottery).find(".lottery-unit-"+index).addClass("active");
+            this.index=index;
             return false;
-        }
-
-        var click=false;
-
-        function save (){
-            var save_url = APP_ROOT + "/index.php?ctl=turntable&act=save";
-            var prize = {$prize_json};
-            $prizeid = prize[{$goodluck}].id;
-            console.log($prizeid);
-            $.ajax({
-                url:save_url,
-                type:'POST',
-                data:{'prizeid':$prizeid},
-                success:function(arg){
-
-                }
-            })
-        }
-        function check (){
+        },
+        stop:function(index){
+            this.prize=index;
+            return false;
 
         }
+    };
+
+    $(function(){
+
+// 第一次调用转盘
+        function roll1(p) {
+
+            var promise = new Promise(function (resolve, reject) {
+
+                roll(resolve,p);
+            });
+
+            return promise;
+
+
+        }
+// 第2次调用转盘
+        function roll2(p){
+            var promise = new Promise(function (resolve, reject) {
+
+                roll(resolve,p);
+            });
+
+            return promise;
+        }
+// 第3次调用转盘
+        function roll3(p) {
+            var promise = new Promise(function (resolve, reject) {
+
+                roll(resolve,p);
+            });
+
+            return promise;
+        }
+// 第4次调用转盘
+        function roll4(p) {
+            var promise = new Promise(function (resolve, reject) {
+
+                roll(resolve,p);
+            });
+
+            return promise;
+        }
+// 第5次调用转盘
+        function roll5(p) {
+            var promise = new Promise(function (resolve, reject) {
+
+                roll(resolve,p);
+            });
+
+            return promise;
+        }
+
+
         window.onload=function(){
             var actity = {$actity_json};
             var actityid = actity.id;
@@ -347,23 +373,22 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
                         data:{'actityid':actityid},
                         success:function(arg){
                             if(arg.code==200){
-                                roll1()
-                                    .then(function(){
-                                        return roll2();
+                                roll1(1)
+                                    .then(function(res){
+                                        console.log(res);
+                                        return roll2(2);
                                     })
-                                    // .then(function () {
-                                    //     return roll3();
-                                    // })
-                                    // .then(function () {
-                                    //     return roll4();
-                                    //
-                                    // })
-                                ;
+                                    .then(function () {
+                                        return roll3(3);
+                                    })
+                                    .then(function () {
+                                        return roll4(4);
+                                    })
+                                    .then(function () {
+                                        return roll5(5);
+                                    });
                                 click=true; //一次抽奖完成后，设置click为true，可继续抽奖
-                                // console.log("aaa");
-                                // location.reload();
                                 return false;
-
 
                             }else if(arg.code==500){
                                 alert(arg.msg);
